docs/envoy/v1.17.1/_sources/intro/arch_overview/security/external_dep_dataplane_ext.rst.txt

envoy.access_loggers.wasm
~~~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `ANTLR Rules for Bazel <https://github.com/marcohu/rules_antlr>`__, `3cc2f95 <https://github.com/marcohu/rules_antlr/tree/3cc2f9502a54ceb7b79b37383316b23c4da66f9a>`__, 2019-06-21, 
  `ANTLR v4 <https://github.com/antlr/antlr4>`__, `4.7.2 <https://github.com/antlr/antlr4/releases/tag/4.7.2>`__, 2018-12-18, 
  `Common Expression Language (CEL) C++ library <https://opensource.google/projects/cel>`__, `9841e3e <https://github.com/google/cel-cpp/tree/9841e3ee251f3cc4cd5b6dd9deee6818bc9f2854>`__, 2020-12-17, 
  `FlatBuffers <https://github.com/google/flatbuffers>`__, `a83caf5 <https://github.com/google/flatbuffers/tree/a83caf5910644ba1c421c002ef68e42f21c15f9f>`__, 2020-04-02, 
  `WebAssembly for Proxies (C++ host implementation) <https://github.com/proxy-wasm/proxy-wasm-cpp-host>`__, `a59dd54 <https://github.com/proxy-wasm/proxy-wasm-cpp-host/tree/a59dd5439070ad6faa6d32ed9a36d0c227a96071>`__, 2021-02-11, 
  `WebAssembly for Proxies (C++ SDK) <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk>`__, `956f0d5 <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk/tree/956f0d500c380cc1656a2d861b7ee12c2515a664>`__, 2020-11-20, 


envoy.bootstrap.wasm
~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `ANTLR Rules for Bazel <https://github.com/marcohu/rules_antlr>`__, `3cc2f95 <https://github.com/marcohu/rules_antlr/tree/3cc2f9502a54ceb7b79b37383316b23c4da66f9a>`__, 2019-06-21, 
  `ANTLR v4 <https://github.com/antlr/antlr4>`__, `4.7.2 <https://github.com/antlr/antlr4/releases/tag/4.7.2>`__, 2018-12-18, 
  `Common Expression Language (CEL) C++ library <https://opensource.google/projects/cel>`__, `9841e3e <https://github.com/google/cel-cpp/tree/9841e3ee251f3cc4cd5b6dd9deee6818bc9f2854>`__, 2020-12-17, 
  `FlatBuffers <https://github.com/google/flatbuffers>`__, `a83caf5 <https://github.com/google/flatbuffers/tree/a83caf5910644ba1c421c002ef68e42f21c15f9f>`__, 2020-04-02, 
  `WebAssembly for Proxies (C++ host implementation) <https://github.com/proxy-wasm/proxy-wasm-cpp-host>`__, `a59dd54 <https://github.com/proxy-wasm/proxy-wasm-cpp-host/tree/a59dd5439070ad6faa6d32ed9a36d0c227a96071>`__, 2021-02-11, 
  `WebAssembly for Proxies (C++ SDK) <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk>`__, `956f0d5 <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk/tree/956f0d500c380cc1656a2d861b7ee12c2515a664>`__, 2020-11-20, 


envoy.filters.http.aws_lambda
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `curl <https://curl.haxx.se>`__, `7.74.0 <https://github.com/curl/curl/releases/tag/curl-7_74_0>`__, 2020-12-09, `cpe:2.3:a:haxx:curl:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Ahaxx%3Acurl%3A%2A&search_type=all>`__


envoy.filters.http.aws_request_signing
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `curl <https://curl.haxx.se>`__, `7.74.0 <https://github.com/curl/curl/releases/tag/curl-7_74_0>`__, 2020-12-09, `cpe:2.3:a:haxx:curl:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Ahaxx%3Acurl%3A%2A&search_type=all>`__


envoy.filters.http.grpc_json_transcoder
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `grpc-httpjson-transcoding <https://github.com/grpc-ecosystem/grpc-httpjson-transcoding>`__, `4d095f0 <https://github.com/grpc-ecosystem/grpc-httpjson-transcoding/tree/4d095f048889d4fc3b8d4579aa80ca4290319802>`__, 2020-11-13, 


envoy.filters.http.jwt_authn
~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `jwt_verify_lib <https://github.com/google/jwt_verify_lib>`__, `28efec2 <https://github.com/google/jwt_verify_lib/tree/28efec2e4df1072db0ed03597591360ec9f80aac>`__, 2020-11-05, 


envoy.filters.http.lua
~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `LuaJIT <https://luajit.org>`__, `1d8b747 <https://github.com/LuaJIT/LuaJIT/tree/1d8b747c161db457e032a023ebbff511f5de5ec2>`__, 2020-10-12, `cpe:2.3:a:luajit:luajit:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Aluajit%3Aluajit%3A%2A&search_type=all>`__
  `Moonjit <https://github.com/moonjit/moonjit>`__, `2.2.0 <https://github.com/moonjit/moonjit/releases/tag/2.2.0>`__, 2020-01-14, `cpe:2.3:a:moonjit_project:moonjit:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Amoonjit_project%3Amoonjit%3A%2A&search_type=all>`__


envoy.filters.http.rbac
~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `Common Expression Language (CEL) C++ library <https://opensource.google/projects/cel>`__, `9841e3e <https://github.com/google/cel-cpp/tree/9841e3ee251f3cc4cd5b6dd9deee6818bc9f2854>`__, 2020-12-17, 
  `FlatBuffers <https://github.com/google/flatbuffers>`__, `a83caf5 <https://github.com/google/flatbuffers/tree/a83caf5910644ba1c421c002ef68e42f21c15f9f>`__, 2020-04-02, 


envoy.filters.http.wasm
~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `ANTLR Rules for Bazel <https://github.com/marcohu/rules_antlr>`__, `3cc2f95 <https://github.com/marcohu/rules_antlr/tree/3cc2f9502a54ceb7b79b37383316b23c4da66f9a>`__, 2019-06-21, 
  `ANTLR v4 <https://github.com/antlr/antlr4>`__, `4.7.2 <https://github.com/antlr/antlr4/releases/tag/4.7.2>`__, 2018-12-18, 
  `Common Expression Language (CEL) C++ library <https://opensource.google/projects/cel>`__, `9841e3e <https://github.com/google/cel-cpp/tree/9841e3ee251f3cc4cd5b6dd9deee6818bc9f2854>`__, 2020-12-17, 
  `FlatBuffers <https://github.com/google/flatbuffers>`__, `a83caf5 <https://github.com/google/flatbuffers/tree/a83caf5910644ba1c421c002ef68e42f21c15f9f>`__, 2020-04-02, 
  `WebAssembly for Proxies (C++ host implementation) <https://github.com/proxy-wasm/proxy-wasm-cpp-host>`__, `a59dd54 <https://github.com/proxy-wasm/proxy-wasm-cpp-host/tree/a59dd5439070ad6faa6d32ed9a36d0c227a96071>`__, 2021-02-11, 
  `WebAssembly for Proxies (C++ SDK) <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk>`__, `956f0d5 <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk/tree/956f0d500c380cc1656a2d861b7ee12c2515a664>`__, 2020-11-20, 


envoy.filters.network.kafka_broker
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `Kafka (source) <https://kafka.apache.org>`__, `2.4.1 <https://github.com/apache/kafka/releases/tag/2.4.1>`__, 2020-03-03, `cpe:2.3:a:apache:kafka:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Aapache%3Akafka%3A%2A&search_type=all>`__


envoy.filters.network.mysql_proxy
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `C++ SQL Parser Library <https://github.com/envoyproxy/sql-parser>`__, `3b40ba2 <https://github.com/envoyproxy/sql-parser/tree/3b40ba2d106587bdf053a292f7e3bb17e818a57f>`__, 2020-06-10, 


envoy.filters.network.postgres_proxy
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `C++ SQL Parser Library <https://github.com/envoyproxy/sql-parser>`__, `3b40ba2 <https://github.com/envoyproxy/sql-parser/tree/3b40ba2d106587bdf053a292f7e3bb17e818a57f>`__, 2020-06-10, 


envoy.filters.network.rbac
~~~~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `Common Expression Language (CEL) C++ library <https://opensource.google/projects/cel>`__, `9841e3e <https://github.com/google/cel-cpp/tree/9841e3ee251f3cc4cd5b6dd9deee6818bc9f2854>`__, 2020-12-17, 
  `FlatBuffers <https://github.com/google/flatbuffers>`__, `a83caf5 <https://github.com/google/flatbuffers/tree/a83caf5910644ba1c421c002ef68e42f21c15f9f>`__, 2020-04-02, 


envoy.filters.network.wasm
~~~~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `ANTLR Rules for Bazel <https://github.com/marcohu/rules_antlr>`__, `3cc2f95 <https://github.com/marcohu/rules_antlr/tree/3cc2f9502a54ceb7b79b37383316b23c4da66f9a>`__, 2019-06-21, 
  `ANTLR v4 <https://github.com/antlr/antlr4>`__, `4.7.2 <https://github.com/antlr/antlr4/releases/tag/4.7.2>`__, 2018-12-18, 
  `Common Expression Language (CEL) C++ library <https://opensource.google/projects/cel>`__, `9841e3e <https://github.com/google/cel-cpp/tree/9841e3ee251f3cc4cd5b6dd9deee6818bc9f2854>`__, 2020-12-17, 
  `FlatBuffers <https://github.com/google/flatbuffers>`__, `a83caf5 <https://github.com/google/flatbuffers/tree/a83caf5910644ba1c421c002ef68e42f21c15f9f>`__, 2020-04-02, 
  `WebAssembly for Proxies (C++ host implementation) <https://github.com/proxy-wasm/proxy-wasm-cpp-host>`__, `a59dd54 <https://github.com/proxy-wasm/proxy-wasm-cpp-host/tree/a59dd5439070ad6faa6d32ed9a36d0c227a96071>`__, 2021-02-11, 
  `WebAssembly for Proxies (C++ SDK) <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk>`__, `956f0d5 <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk/tree/956f0d500c380cc1656a2d861b7ee12c2515a664>`__, 2020-11-20, 


envoy.grpc_credentials.aws_iam
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `curl <https://curl.haxx.se>`__, `7.74.0 <https://github.com/curl/curl/releases/tag/curl-7_74_0>`__, 2020-12-09, `cpe:2.3:a:haxx:curl:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Ahaxx%3Acurl%3A%2A&search_type=all>`__


envoy.rate_limit_descriptors.expr
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `ANTLR Rules for Bazel <https://github.com/marcohu/rules_antlr>`__, `3cc2f95 <https://github.com/marcohu/rules_antlr/tree/3cc2f9502a54ceb7b79b37383316b23c4da66f9a>`__, 2019-06-21, 
  `ANTLR v4 <https://github.com/antlr/antlr4>`__, `4.7.2 <https://github.com/antlr/antlr4/releases/tag/4.7.2>`__, 2018-12-18, 
  `Common Expression Language (CEL) C++ library <https://opensource.google/projects/cel>`__, `9841e3e <https://github.com/google/cel-cpp/tree/9841e3ee251f3cc4cd5b6dd9deee6818bc9f2854>`__, 2020-12-17, 
  `FlatBuffers <https://github.com/google/flatbuffers>`__, `a83caf5 <https://github.com/google/flatbuffers/tree/a83caf5910644ba1c421c002ef68e42f21c15f9f>`__, 2020-04-02, 


envoy.stat_sinks.wasm
~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `ANTLR Rules for Bazel <https://github.com/marcohu/rules_antlr>`__, `3cc2f95 <https://github.com/marcohu/rules_antlr/tree/3cc2f9502a54ceb7b79b37383316b23c4da66f9a>`__, 2019-06-21, 
  `ANTLR v4 <https://github.com/antlr/antlr4>`__, `4.7.2 <https://github.com/antlr/antlr4/releases/tag/4.7.2>`__, 2018-12-18, 
  `Common Expression Language (CEL) C++ library <https://opensource.google/projects/cel>`__, `9841e3e <https://github.com/google/cel-cpp/tree/9841e3ee251f3cc4cd5b6dd9deee6818bc9f2854>`__, 2020-12-17, 
  `FlatBuffers <https://github.com/google/flatbuffers>`__, `a83caf5 <https://github.com/google/flatbuffers/tree/a83caf5910644ba1c421c002ef68e42f21c15f9f>`__, 2020-04-02, 
  `WebAssembly for Proxies (C++ host implementation) <https://github.com/proxy-wasm/proxy-wasm-cpp-host>`__, `a59dd54 <https://github.com/proxy-wasm/proxy-wasm-cpp-host/tree/a59dd5439070ad6faa6d32ed9a36d0c227a96071>`__, 2021-02-11, 
  `WebAssembly for Proxies (C++ SDK) <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk>`__, `956f0d5 <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk/tree/956f0d500c380cc1656a2d861b7ee12c2515a664>`__, 2020-11-20, 


envoy.tracers.opencensus
~~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `curl <https://curl.haxx.se>`__, `7.74.0 <https://github.com/curl/curl/releases/tag/curl-7_74_0>`__, 2020-12-09, `cpe:2.3:a:haxx:curl:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Ahaxx%3Acurl%3A%2A&search_type=all>`__


envoy.transport_sockets.quic
~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `QUICHE <https://quiche.googlesource.com/quiche>`__, `ecc28c0 <https://storage.googleapis.com/quiche-envoy-integration/ecc28c0d7428f3323ea26eb1ddb98a5e06b23dea.tar.gz>`__, 2020-11-10, 


envoy.wasm.runtime.null
~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `WebAssembly for Proxies (C++ host implementation) <https://github.com/proxy-wasm/proxy-wasm-cpp-host>`__, `a59dd54 <https://github.com/proxy-wasm/proxy-wasm-cpp-host/tree/a59dd5439070ad6faa6d32ed9a36d0c227a96071>`__, 2021-02-11, 
  `WebAssembly for Proxies (C++ SDK) <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk>`__, `956f0d5 <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk/tree/956f0d500c380cc1656a2d861b7ee12c2515a664>`__, 2020-11-20, 


envoy.wasm.runtime.v8
~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `V8 <https://v8.dev>`__, `8.8.278.8 <https://storage.googleapis.com/envoyproxy-wee8/wee8-8.8.278.8.tar.gz>`__, 2020-12-04, `cpe:2.3:a:google:v8:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agoogle%3Av8%3A%2A&search_type=all>`__
  `WebAssembly for Proxies (C++ host implementation) <https://github.com/proxy-wasm/proxy-wasm-cpp-host>`__, `a59dd54 <https://github.com/proxy-wasm/proxy-wasm-cpp-host/tree/a59dd5439070ad6faa6d32ed9a36d0c227a96071>`__, 2021-02-11, 
  `WebAssembly for Proxies (C++ SDK) <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk>`__, `956f0d5 <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk/tree/956f0d500c380cc1656a2d861b7ee12c2515a664>`__, 2020-11-20, 


envoy.wasm.runtime.wasmtime
~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `Bazel rust rules <https://github.com/bazelbuild/rules_rust>`__, `aa7c693 <https://github.com/bazelbuild/rules_rust/tree/aa7c6938cf1cc2973bc065c7532f89874bf09818>`__, 2020-12-04, 
  `wasm-c-api <https://github.com/WebAssembly/wasm-c-api>`__, `d9a8009 <https://github.com/WebAssembly/wasm-c-api/tree/d9a80099d496b5cdba6f3fe8fc77586e0e505ddc>`__, 2019-11-14, 
  `wasmtime <https://github.com/bytecodealliance/wasmtime>`__, `0.21.0 <https://github.com/bytecodealliance/wasmtime/releases/tag/v0.21.0>`__, 2020-11-05, 
  `WebAssembly for Proxies (C++ host implementation) <https://github.com/proxy-wasm/proxy-wasm-cpp-host>`__, `a59dd54 <https://github.com/proxy-wasm/proxy-wasm-cpp-host/tree/a59dd5439070ad6faa6d32ed9a36d0c227a96071>`__, 2021-02-11, 
  `WebAssembly for Proxies (C++ SDK) <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk>`__, `956f0d5 <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk/tree/956f0d500c380cc1656a2d861b7ee12c2515a664>`__, 2020-11-20, 


envoy.wasm.runtime.wavm
~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `LLVM <https://llvm.org>`__, `10.0.0 <https://github.com/llvm/llvm-project/releases/tag/llvmorg-10.0.0>`__, 2020-03-23, `cpe:2.3:a:llvm:*:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Allvm%3A%2A%3A%2A&search_type=all>`__
  `WAVM <https://wavm.github.io>`__, `e289ba6 <https://github.com/WAVM/WAVM/tree/e289ba654fe51655ab080819fd85ed9c936aae6e>`__, 2020-09-17, `cpe:2.3:a:webassembly_virtual_machine_project:webassembly_virtual_machine:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Awebassembly_virtual_machine_project%3Awebassembly_virtual_machine%3A%2A&search_type=all>`__
  `WebAssembly for Proxies (C++ host implementation) <https://github.com/proxy-wasm/proxy-wasm-cpp-host>`__, `a59dd54 <https://github.com/proxy-wasm/proxy-wasm-cpp-host/tree/a59dd5439070ad6faa6d32ed9a36d0c227a96071>`__, 2021-02-11, 
  `WebAssembly for Proxies (C++ SDK) <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk>`__, `956f0d5 <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk/tree/956f0d500c380cc1656a2d861b7ee12c2515a664>`__, 2020-11-20, 

