docs/envoy/v1.19.4/_sources/intro/arch_overview/security/external_dep_dataplane_ext.rst.txt

envoy.access_loggers.wasm
~~~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `ANTLR Rules for Bazel <https://github.com/marcohu/rules_antlr>`__, `3cc2f95 <https://github.com/marcohu/rules_antlr/tree/3cc2f9502a54ceb7b79b37383316b23c4da66f9a>`__, 2019-06-21, 
  `ANTLR v4 <https://github.com/antlr/antlr4>`__, `4.7.2 <https://github.com/antlr/antlr4/releases/tag/4.7.2>`__, 2018-12-18, 
  `Common Expression Language (CEL) C++ library <https://opensource.google/projects/cel>`__, `0.6.1 <https://github.com/google/cel-cpp/releases/tag/v0.6.1>`__, 2021-06-28, 
  `FlatBuffers <https://github.com/google/flatbuffers>`__, `a83caf5 <https://github.com/google/flatbuffers/tree/a83caf5910644ba1c421c002ef68e42f21c15f9f>`__, 2020-04-02, 
  `WebAssembly for Proxies (C++ host implementation) <https://github.com/proxy-wasm/proxy-wasm-cpp-host>`__, `c9760d1 <https://github.com/proxy-wasm/proxy-wasm-cpp-host/tree/c9760d179fb108bd6c921dfea9c8fc9ebbdebfba>`__, 2021-07-11, 
  `WebAssembly for Proxies (C++ SDK) <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk>`__, `fd0be84 <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk/tree/fd0be8405db25de0264bdb78fae3a82668c03782>`__, 2021-06-24, 


envoy.bootstrap.wasm
~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `ANTLR Rules for Bazel <https://github.com/marcohu/rules_antlr>`__, `3cc2f95 <https://github.com/marcohu/rules_antlr/tree/3cc2f9502a54ceb7b79b37383316b23c4da66f9a>`__, 2019-06-21, 
  `ANTLR v4 <https://github.com/antlr/antlr4>`__, `4.7.2 <https://github.com/antlr/antlr4/releases/tag/4.7.2>`__, 2018-12-18, 
  `Common Expression Language (CEL) C++ library <https://opensource.google/projects/cel>`__, `0.6.1 <https://github.com/google/cel-cpp/releases/tag/v0.6.1>`__, 2021-06-28, 
  `FlatBuffers <https://github.com/google/flatbuffers>`__, `a83caf5 <https://github.com/google/flatbuffers/tree/a83caf5910644ba1c421c002ef68e42f21c15f9f>`__, 2020-04-02, 
  `WebAssembly for Proxies (C++ host implementation) <https://github.com/proxy-wasm/proxy-wasm-cpp-host>`__, `c9760d1 <https://github.com/proxy-wasm/proxy-wasm-cpp-host/tree/c9760d179fb108bd6c921dfea9c8fc9ebbdebfba>`__, 2021-07-11, 
  `WebAssembly for Proxies (C++ SDK) <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk>`__, `fd0be84 <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk/tree/fd0be8405db25de0264bdb78fae3a82668c03782>`__, 2021-06-24, 


envoy.compression.brotli.compressor
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `brotli <https://brotli.org>`__, `0cd2e39 <https://github.com/google/brotli/tree/0cd2e3926e95e7e2930f57ae3f4885508d462a25>`__, 2020-09-08, `cpe:2.3:a:google:brotli:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agoogle%3Abrotli%3A%2A&search_type=all>`__


envoy.compression.brotli.decompressor
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `brotli <https://brotli.org>`__, `0cd2e39 <https://github.com/google/brotli/tree/0cd2e3926e95e7e2930f57ae3f4885508d462a25>`__, 2020-09-08, `cpe:2.3:a:google:brotli:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agoogle%3Abrotli%3A%2A&search_type=all>`__


envoy.filters.http.aws_lambda
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `curl <https://curl.haxx.se>`__, `7.77.0 <https://github.com/curl/curl/releases/tag/curl-7_77_0>`__, 2021-05-26, `cpe:2.3:a:haxx:libcurl:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Ahaxx%3Alibcurl%3A%2A&search_type=all>`__


envoy.filters.http.aws_request_signing
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `curl <https://curl.haxx.se>`__, `7.77.0 <https://github.com/curl/curl/releases/tag/curl-7_77_0>`__, 2021-05-26, `cpe:2.3:a:haxx:libcurl:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Ahaxx%3Alibcurl%3A%2A&search_type=all>`__


envoy.filters.http.grpc_json_transcoder
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `grpc-httpjson-transcoding <https://github.com/grpc-ecosystem/grpc-httpjson-transcoding>`__, `f1591a4 <https://github.com/grpc-ecosystem/grpc-httpjson-transcoding/tree/f1591a41318104b7e27a26be12f502b106a16256>`__, 2021-05-08, 


envoy.filters.http.jwt_authn
~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `jwt_verify_lib <https://github.com/google/jwt_verify_lib>`__, `28efec2 <https://github.com/google/jwt_verify_lib/tree/28efec2e4df1072db0ed03597591360ec9f80aac>`__, 2020-11-05, 


envoy.filters.http.lua
~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `LuaJIT <https://luajit.org>`__, `1d8b747 <https://github.com/LuaJIT/LuaJIT/tree/1d8b747c161db457e032a023ebbff511f5de5ec2>`__, 2020-10-12, `cpe:2.3:a:luajit:luajit:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Aluajit%3Aluajit%3A%2A&search_type=all>`__
  `Moonjit <https://github.com/moonjit/moonjit>`__, `2.2.0 <https://github.com/moonjit/moonjit/releases/tag/2.2.0>`__, 2020-01-14, `cpe:2.3:a:moonjit_project:moonjit:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Amoonjit_project%3Amoonjit%3A%2A&search_type=all>`__


envoy.filters.http.rbac
~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `Common Expression Language (CEL) C++ library <https://opensource.google/projects/cel>`__, `0.6.1 <https://github.com/google/cel-cpp/releases/tag/v0.6.1>`__, 2021-06-28, 
  `FlatBuffers <https://github.com/google/flatbuffers>`__, `a83caf5 <https://github.com/google/flatbuffers/tree/a83caf5910644ba1c421c002ef68e42f21c15f9f>`__, 2020-04-02, 


envoy.filters.http.wasm
~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `ANTLR Rules for Bazel <https://github.com/marcohu/rules_antlr>`__, `3cc2f95 <https://github.com/marcohu/rules_antlr/tree/3cc2f9502a54ceb7b79b37383316b23c4da66f9a>`__, 2019-06-21, 
  `ANTLR v4 <https://github.com/antlr/antlr4>`__, `4.7.2 <https://github.com/antlr/antlr4/releases/tag/4.7.2>`__, 2018-12-18, 
  `Common Expression Language (CEL) C++ library <https://opensource.google/projects/cel>`__, `0.6.1 <https://github.com/google/cel-cpp/releases/tag/v0.6.1>`__, 2021-06-28, 
  `FlatBuffers <https://github.com/google/flatbuffers>`__, `a83caf5 <https://github.com/google/flatbuffers/tree/a83caf5910644ba1c421c002ef68e42f21c15f9f>`__, 2020-04-02, 
  `WebAssembly for Proxies (C++ host implementation) <https://github.com/proxy-wasm/proxy-wasm-cpp-host>`__, `c9760d1 <https://github.com/proxy-wasm/proxy-wasm-cpp-host/tree/c9760d179fb108bd6c921dfea9c8fc9ebbdebfba>`__, 2021-07-11, 
  `WebAssembly for Proxies (C++ SDK) <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk>`__, `fd0be84 <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk/tree/fd0be8405db25de0264bdb78fae3a82668c03782>`__, 2021-06-24, 


envoy.filters.network.dubbo_proxy
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `hessian2-codec <https://github.com/alibaba/hessian2-codec.git>`__, `dd8e054 <https://github.com/alibaba/hessian2-codec/tree/dd8e05487a27b367b90ce81f4e6e6f62d693a212>`__, 2021-04-05, 


envoy.filters.network.kafka_broker
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `Kafka (source) <https://kafka.apache.org>`__, `2.4.1 <https://github.com/apache/kafka/releases/tag/2.4.1>`__, 2020-03-03, `cpe:2.3:a:apache:kafka:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Aapache%3Akafka%3A%2A&search_type=all>`__


envoy.filters.network.mysql_proxy
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `C++ SQL Parser Library <https://github.com/envoyproxy/sql-parser>`__, `3b40ba2 <https://github.com/envoyproxy/sql-parser/tree/3b40ba2d106587bdf053a292f7e3bb17e818a57f>`__, 2020-06-10, 


envoy.filters.network.postgres_proxy
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `C++ SQL Parser Library <https://github.com/envoyproxy/sql-parser>`__, `3b40ba2 <https://github.com/envoyproxy/sql-parser/tree/3b40ba2d106587bdf053a292f7e3bb17e818a57f>`__, 2020-06-10, 


envoy.filters.network.rbac
~~~~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `Common Expression Language (CEL) C++ library <https://opensource.google/projects/cel>`__, `0.6.1 <https://github.com/google/cel-cpp/releases/tag/v0.6.1>`__, 2021-06-28, 
  `FlatBuffers <https://github.com/google/flatbuffers>`__, `a83caf5 <https://github.com/google/flatbuffers/tree/a83caf5910644ba1c421c002ef68e42f21c15f9f>`__, 2020-04-02, 


envoy.filters.network.wasm
~~~~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `ANTLR Rules for Bazel <https://github.com/marcohu/rules_antlr>`__, `3cc2f95 <https://github.com/marcohu/rules_antlr/tree/3cc2f9502a54ceb7b79b37383316b23c4da66f9a>`__, 2019-06-21, 
  `ANTLR v4 <https://github.com/antlr/antlr4>`__, `4.7.2 <https://github.com/antlr/antlr4/releases/tag/4.7.2>`__, 2018-12-18, 
  `Common Expression Language (CEL) C++ library <https://opensource.google/projects/cel>`__, `0.6.1 <https://github.com/google/cel-cpp/releases/tag/v0.6.1>`__, 2021-06-28, 
  `FlatBuffers <https://github.com/google/flatbuffers>`__, `a83caf5 <https://github.com/google/flatbuffers/tree/a83caf5910644ba1c421c002ef68e42f21c15f9f>`__, 2020-04-02, 
  `WebAssembly for Proxies (C++ host implementation) <https://github.com/proxy-wasm/proxy-wasm-cpp-host>`__, `c9760d1 <https://github.com/proxy-wasm/proxy-wasm-cpp-host/tree/c9760d179fb108bd6c921dfea9c8fc9ebbdebfba>`__, 2021-07-11, 
  `WebAssembly for Proxies (C++ SDK) <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk>`__, `fd0be84 <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk/tree/fd0be8405db25de0264bdb78fae3a82668c03782>`__, 2021-06-24, 


envoy.grpc_credentials.aws_iam
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `curl <https://curl.haxx.se>`__, `7.77.0 <https://github.com/curl/curl/releases/tag/curl-7_77_0>`__, 2021-05-26, `cpe:2.3:a:haxx:libcurl:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Ahaxx%3Alibcurl%3A%2A&search_type=all>`__


envoy.rate_limit_descriptors.expr
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `ANTLR Rules for Bazel <https://github.com/marcohu/rules_antlr>`__, `3cc2f95 <https://github.com/marcohu/rules_antlr/tree/3cc2f9502a54ceb7b79b37383316b23c4da66f9a>`__, 2019-06-21, 
  `ANTLR v4 <https://github.com/antlr/antlr4>`__, `4.7.2 <https://github.com/antlr/antlr4/releases/tag/4.7.2>`__, 2018-12-18, 
  `Common Expression Language (CEL) C++ library <https://opensource.google/projects/cel>`__, `0.6.1 <https://github.com/google/cel-cpp/releases/tag/v0.6.1>`__, 2021-06-28, 
  `FlatBuffers <https://github.com/google/flatbuffers>`__, `a83caf5 <https://github.com/google/flatbuffers/tree/a83caf5910644ba1c421c002ef68e42f21c15f9f>`__, 2020-04-02, 


envoy.stat_sinks.wasm
~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `ANTLR Rules for Bazel <https://github.com/marcohu/rules_antlr>`__, `3cc2f95 <https://github.com/marcohu/rules_antlr/tree/3cc2f9502a54ceb7b79b37383316b23c4da66f9a>`__, 2019-06-21, 
  `ANTLR v4 <https://github.com/antlr/antlr4>`__, `4.7.2 <https://github.com/antlr/antlr4/releases/tag/4.7.2>`__, 2018-12-18, 
  `Common Expression Language (CEL) C++ library <https://opensource.google/projects/cel>`__, `0.6.1 <https://github.com/google/cel-cpp/releases/tag/v0.6.1>`__, 2021-06-28, 
  `FlatBuffers <https://github.com/google/flatbuffers>`__, `a83caf5 <https://github.com/google/flatbuffers/tree/a83caf5910644ba1c421c002ef68e42f21c15f9f>`__, 2020-04-02, 
  `WebAssembly for Proxies (C++ host implementation) <https://github.com/proxy-wasm/proxy-wasm-cpp-host>`__, `c9760d1 <https://github.com/proxy-wasm/proxy-wasm-cpp-host/tree/c9760d179fb108bd6c921dfea9c8fc9ebbdebfba>`__, 2021-07-11, 
  `WebAssembly for Proxies (C++ SDK) <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk>`__, `fd0be84 <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk/tree/fd0be8405db25de0264bdb78fae3a82668c03782>`__, 2021-06-24, 


envoy.tracers.opencensus
~~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `curl <https://curl.haxx.se>`__, `7.77.0 <https://github.com/curl/curl/releases/tag/curl-7_77_0>`__, 2021-05-26, `cpe:2.3:a:haxx:libcurl:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Ahaxx%3Alibcurl%3A%2A&search_type=all>`__


envoy.wasm.runtime.null
~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `WebAssembly for Proxies (C++ host implementation) <https://github.com/proxy-wasm/proxy-wasm-cpp-host>`__, `c9760d1 <https://github.com/proxy-wasm/proxy-wasm-cpp-host/tree/c9760d179fb108bd6c921dfea9c8fc9ebbdebfba>`__, 2021-07-11, 
  `WebAssembly for Proxies (C++ SDK) <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk>`__, `fd0be84 <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk/tree/fd0be8405db25de0264bdb78fae3a82668c03782>`__, 2021-06-24, 


envoy.wasm.runtime.v8
~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `V8 <https://v8.dev>`__, `9.2.230.13 <https://storage.googleapis.com/envoyproxy-wee8/wee8-9.2.230.13.tar.gz>`__, 2021-06-25, `cpe:2.3:a:google:v8:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agoogle%3Av8%3A%2A&search_type=all>`__
  `WebAssembly for Proxies (C++ host implementation) <https://github.com/proxy-wasm/proxy-wasm-cpp-host>`__, `c9760d1 <https://github.com/proxy-wasm/proxy-wasm-cpp-host/tree/c9760d179fb108bd6c921dfea9c8fc9ebbdebfba>`__, 2021-07-11, 
  `WebAssembly for Proxies (C++ SDK) <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk>`__, `fd0be84 <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk/tree/fd0be8405db25de0264bdb78fae3a82668c03782>`__, 2021-06-24, 


envoy.wasm.runtime.wamr
~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `LLVM <https://llvm.org>`__, `10.0.0 <https://github.com/llvm/llvm-project/releases/tag/llvmorg-10.0.0>`__, 2020-03-24, `cpe:2.3:a:llvm:*:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Allvm%3A%2A%3A%2A&search_type=all>`__
  `WebAssembly for Proxies (C++ host implementation) <https://github.com/proxy-wasm/proxy-wasm-cpp-host>`__, `c9760d1 <https://github.com/proxy-wasm/proxy-wasm-cpp-host/tree/c9760d179fb108bd6c921dfea9c8fc9ebbdebfba>`__, 2021-07-11, 
  `WebAssembly for Proxies (C++ SDK) <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk>`__, `fd0be84 <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk/tree/fd0be8405db25de0264bdb78fae3a82668c03782>`__, 2021-06-24, 
  `Webassembly Micro Runtime <https://github.com/bytecodealliance/wasm-micro-runtime>`__, `b554a9d <https://github.com/bytecodealliance/wasm-micro-runtime/tree/b554a9d05d89bb4ef28068b4ae4d0ee6c99bc9db>`__, 2021-07-06, 


envoy.wasm.runtime.wasmtime
~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `Bazel rust rules <https://github.com/bazelbuild/rules_rust>`__, `7e7246f <https://github.com/bazelbuild/rules_rust/tree/7e7246f6c48a5d4e69744cd79b9ccb8886966ee2>`__, 2021-06-29, 
  `wasm-c-api <https://github.com/WebAssembly/wasm-c-api>`__, `c9d3128 <https://github.com/WebAssembly/wasm-c-api/tree/c9d31284651b975f05ac27cee0bab1377560b87e>`__, 2021-01-11, 
  `wasmtime <https://github.com/bytecodealliance/wasmtime>`__, `0.26.0 <https://github.com/bytecodealliance/wasmtime/releases/tag/v0.26.0>`__, 2021-04-05, 
  `WebAssembly for Proxies (C++ host implementation) <https://github.com/proxy-wasm/proxy-wasm-cpp-host>`__, `c9760d1 <https://github.com/proxy-wasm/proxy-wasm-cpp-host/tree/c9760d179fb108bd6c921dfea9c8fc9ebbdebfba>`__, 2021-07-11, 
  `WebAssembly for Proxies (C++ SDK) <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk>`__, `fd0be84 <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk/tree/fd0be8405db25de0264bdb78fae3a82668c03782>`__, 2021-06-24, 


envoy.wasm.runtime.wavm
~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `LLVM <https://llvm.org>`__, `10.0.0 <https://github.com/llvm/llvm-project/releases/tag/llvmorg-10.0.0>`__, 2020-03-24, `cpe:2.3:a:llvm:*:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Allvm%3A%2A%3A%2A&search_type=all>`__
  `WAVM <https://wavm.github.io>`__, `79c3aa2 <https://github.com/WAVM/WAVM/tree/79c3aa29366615d9b1593cd527e5b4b94cc6072a>`__, 2021-03-31, `cpe:2.3:a:webassembly_virtual_machine_project:webassembly_virtual_machine:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Awebassembly_virtual_machine_project%3Awebassembly_virtual_machine%3A%2A&search_type=all>`__
  `WebAssembly for Proxies (C++ host implementation) <https://github.com/proxy-wasm/proxy-wasm-cpp-host>`__, `c9760d1 <https://github.com/proxy-wasm/proxy-wasm-cpp-host/tree/c9760d179fb108bd6c921dfea9c8fc9ebbdebfba>`__, 2021-07-11, 
  `WebAssembly for Proxies (C++ SDK) <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk>`__, `fd0be84 <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk/tree/fd0be8405db25de0264bdb78fae3a82668c03782>`__, 2021-06-24, 

